src/snapshots/new_nu_parser__test__lexer3@datetime.nu.snap
---
source: src/test.rs
expression: evaluate_lexer3(path)
input_file: tests/lex/datetime.nu
snapshot_kind: text
---
Token    0: Datetime                  span:    0 ..   10 '2020-12-20'
Token    1: Newline                   span:   10 ..   11 '\n'
Token    2: Datetime                  span:   11 ..   30 '2020-12-20T12:23:34'
Token    3: Newline                   span:   30 ..   31 '\n'
Token    4: Datetime                  span:   31 ..   54 '2020-12-20T12:23:34.456'
Token    5: Newline                   span:   54 ..   55 '\n'
Token    6: Datetime                  span:   55 ..   79 '2020-12-20T12:23:34.456Z'
Token    7: Newline                   span:   79 ..   80 '\n'
Token    8: Datetime                  span:   80 ..  109 '2020-12-20T12:23:34.456+02:00'
Token    9: Newline                   span:  109 ..  110 '\n'
Token   10: Datetime                  span:  110 ..  139 '2020-12-20T12:23:34.456-02:00'
Token   11: Newline                   span:  139 ..  140 '\n'
Token   12: Datetime                  span:  140 ..  165 '2020-12-20T12:23:34+02:00'
Token   13: Newline                   span:  165 ..  166 '\n'
