src/snapshots/new_nu_parser__test__lexer3@int.nu.snap
---
source: src/test.rs
expression: evaluate_lexer3(path)
input_file: tests/lex/int.nu
snapshot_kind: text
---
Token    0: Int                       span:    0 ..    1 '0'
Token    1: Newline                   span:    1 ..    2 '\n'
Token    2: Int                       span:    2 ..    4 '00'
Token    3: Newline                   span:    4 ..    5 '\n'
Token    4: Int                       span:    5 ..   10 '0x123'
Token    5: Newline                   span:   10 ..   11 '\n'
Token    6: Int                       span:   11 ..   16 '0b101'
Token    7: Newline                   span:   16 ..   17 '\n'
Token    8: Int                       span:   17 ..   19 '0_'
Token    9: Newline                   span:   19 ..   20 '\n'
Token   10: Bareword                  span:   20 ..   23 '0bo'
Token   11: Newline                   span:   23 ..   24 '\n'
Token   12: Bareword                  span:   24 ..   26 '0x'
Token   13: Newline                   span:   26 ..   27 '\n'
Token   14: Bareword                  span:   27 ..   32 '01x10'
Token   15: Newline                   span:   32 ..   33 '\n'
