src/snapshots/new_nu_parser__test__lexer@datetime.nu.snap
---
source: src/test.rs
expression: evaluate_lexer(path)
input_file: tests/lex/datetime.nu
snapshot_kind: text
---
Token    0: Number                    span:    0 ..    4 '2020'
Token    1: Dash                      span:    4 ..    5 '-'
Token    2: Number                    span:    5 ..    7 '12'
Token    3: Dash                      span:    7 ..    8 '-'
Token    4: Number                    span:    8 ..   10 '20'
Token    5: Newline                   span:   10 ..   11 '\n'
Token    6: Number                    span:   11 ..   15 '2020'
Token    7: Dash                      span:   15 ..   16 '-'
Token    8: Number                    span:   16 ..   18 '12'
Token    9: Dash                      span:   18 ..   19 '-'
Token   10: Number                    span:   19 ..   21 '20'
Token   11: Name                      span:   21 ..   24 'T12'
Token   12: Colon                     span:   24 ..   25 ':'
Token   13: Number                    span:   25 ..   27 '23'
Token   14: Colon                     span:   27 ..   28 ':'
Token   15: Number                    span:   28 ..   30 '34'
Token   16: Newline                   span:   30 ..   31 '\n'
Token   17: Number                    span:   31 ..   35 '2020'
Token   18: Dash                      span:   35 ..   36 '-'
Token   19: Number                    span:   36 ..   38 '12'
Token   20: Dash                      span:   38 ..   39 '-'
Token   21: Number                    span:   39 ..   41 '20'
Token   22: Name                      span:   41 ..   44 'T12'
Token   23: Colon                     span:   44 ..   45 ':'
Token   24: Number                    span:   45 ..   47 '23'
Token   25: Colon                     span:   47 ..   48 ':'
Token   26: Number                    span:   48 ..   54 '34.456'
Token   27: Newline                   span:   54 ..   55 '\n'
Token   28: Number                    span:   55 ..   59 '2020'
Token   29: Dash                      span:   59 ..   60 '-'
Token   30: Number                    span:   60 ..   62 '12'
Token   31: Dash                      span:   62 ..   63 '-'
Token   32: Number                    span:   63 ..   65 '20'
Token   33: Name                      span:   65 ..   68 'T12'
Token   34: Colon                     span:   68 ..   69 ':'
Token   35: Number                    span:   69 ..   71 '23'
Token   36: Colon                     span:   71 ..   72 ':'
Token   37: Number                    span:   72 ..   78 '34.456'
Token   38: Name                      span:   78 ..   79 'Z'
Token   39: Newline                   span:   79 ..   80 '\n'
Token   40: Number                    span:   80 ..   84 '2020'
Token   41: Dash                      span:   84 ..   85 '-'
Token   42: Number                    span:   85 ..   87 '12'
Token   43: Dash                      span:   87 ..   88 '-'
Token   44: Number                    span:   88 ..   90 '20'
Token   45: Name                      span:   90 ..   93 'T12'
Token   46: Colon                     span:   93 ..   94 ':'
Token   47: Number                    span:   94 ..   96 '23'
Token   48: Colon                     span:   96 ..   97 ':'
Token   49: Number                    span:   97 ..  103 '34.456'
Token   50: Plus                      span:  103 ..  104 '+'
Token   51: Number                    span:  104 ..  106 '02'
Token   52: Colon                     span:  106 ..  107 ':'
Token   53: Number                    span:  107 ..  109 '00'
Token   54: Newline                   span:  109 ..  110 '\n'
Token   55: Number                    span:  110 ..  114 '2020'
Token   56: Dash                      span:  114 ..  115 '-'
Token   57: Number                    span:  115 ..  117 '12'
Token   58: Dash                      span:  117 ..  118 '-'
Token   59: Number                    span:  118 ..  120 '20'
Token   60: Name                      span:  120 ..  123 'T12'
Token   61: Colon                     span:  123 ..  124 ':'
Token   62: Number                    span:  124 ..  126 '23'
Token   63: Colon                     span:  126 ..  127 ':'
Token   64: Number                    span:  127 ..  133 '34.456'
Token   65: Dash                      span:  133 ..  134 '-'
Token   66: Number                    span:  134 ..  136 '02'
Token   67: Colon                     span:  136 ..  137 ':'
Token   68: Number                    span:  137 ..  139 '00'
Token   69: Newline                   span:  139 ..  140 '\n'
Token   70: Number                    span:  140 ..  144 '2020'
Token   71: Dash                      span:  144 ..  145 '-'
Token   72: Number                    span:  145 ..  147 '12'
Token   73: Dash                      span:  147 ..  148 '-'
Token   74: Number                    span:  148 ..  150 '20'
Token   75: Name                      span:  150 ..  153 'T12'
Token   76: Colon                     span:  153 ..  154 ':'
Token   77: Number                    span:  154 ..  156 '23'
Token   78: Colon                     span:  156 ..  157 ':'
Token   79: Number                    span:  157 ..  159 '34'
Token   80: Plus                      span:  159 ..  160 '+'
Token   81: Number                    span:  160 ..  162 '02'
Token   82: Colon                     span:  162 ..  163 ':'
Token   83: Number                    span:  163 ..  165 '00'
Token   84: Newline                   span:  165 ..  166 '\n'
