src/snapshots/new_nu_parser__test__lexer@dq_string_interp.nu.snap
---
source: src/test.rs
expression: evaluate_lexer(path)
input_file: tests/lex/dq_string_interp.nu
---
==== TOKENS ====
Token3    0: DqStringInterpStart       span:    0 ..    2 '$"'
Token3    1: StrInterpEnd              span:    2 ..    3 '"'
Token3    2: Newline                   span:    3 ..    4 '\n'
Token3    3: DqStringInterpStart       span:    4 ..    6 '$"'
Token3    4: StrInterpChunk            span:    6 ..    9 'foo'
Token3    5: StrInterpEnd              span:    9 ..   10 '"'
Token3    6: Newline                   span:   10 ..   11 '\n'
Token3    7: DqStringInterpStart       span:   11 ..   13 '$"'
Token3    8: StrInterpChunk            span:   13 ..   18 'foo\('
Token3    9: StrInterpEnd              span:   18 ..   19 '"'
Token3   10: Newline                   span:   19 ..   20 '\n'
Token3   11: DqStringInterpStart       span:   20 ..   22 '$"'
Token3   12: StrInterpChunk            span:   22 ..   28 'foo\()'
Token3   13: StrInterpEnd              span:   28 ..   29 '"'
Token3   14: Newline                   span:   29 ..   30 '\n'
Token3   15: DqStringInterpStart       span:   30 ..   32 '$"'
Token3   16: StrInterpChunk            span:   32 ..   36 'foo)'
Token3   17: StrInterpEnd              span:   36 ..   37 '"'
Token3   18: Newline                   span:   37 ..   38 '\n'
Token3   19: DqStringInterpStart       span:   38 ..   40 '$"'
Token3   20: StrInterpLParen           span:   40 ..   41 '('
Token3   21: Int                       span:   41 ..   42 '1'
Token3   22: StrInterpRParen           span:   42 ..   43 ')'
Token3   23: StrInterpChunk            span:   43 ..   46 'bar'
Token3   24: StrInterpEnd              span:   46 ..   47 '"'
Token3   25: Newline                   span:   47 ..   48 '\n'
Token3   26: DqStringInterpStart       span:   48 ..   50 '$"'
Token3   27: StrInterpChunk            span:   50 ..   53 'foo'
Token3   28: StrInterpLParen           span:   53 ..   54 '('
Token3   29: Int                       span:   54 ..   55 '1'
Token3   30: StrInterpRParen           span:   55 ..   56 ')'
Token3   31: StrInterpChunk            span:   56 ..   59 'bar'
Token3   32: StrInterpEnd              span:   59 ..   60 '"'
Token3   33: Newline                   span:   60 ..   61 '\n'
Token3   34: DqStringInterpStart       span:   61 ..   63 '$"'
Token3   35: StrInterpChunk            span:   63 ..   66 'foo'
Token3   36: StrInterpLParen           span:   66 ..   67 '('
Token3   37: LParen                    span:   67 ..   68 '('
Token3   38: Int                       span:   68 ..   69 '1'
Token3   39: RParen                    span:   69 ..   70 ')'
Token3   40: StrInterpRParen           span:   70 ..   71 ')'
Token3   41: StrInterpChunk            span:   71 ..   74 'bar'
Token3   42: StrInterpEnd              span:   74 ..   75 '"'
Token3   43: Newline                   span:   75 ..   76 '\n'
Token3   44: DqStringInterpStart       span:   76 ..   78 '$"'
Token3   45: StrInterpChunk            span:   78 ..   81 'foo'
Token3   46: StrInterpLParen           span:   81 ..   82 '('
Token3   47: Int                       span:   82 ..   83 '1'
Token3   48: Plus                      span:   84 ..   85 '+'
Token3   49: LParen                    span:   86 ..   87 '('
Token3   50: Int                       span:   87 ..   88 '2'
Token3   51: Plus                      span:   89 ..   90 '+'
Token3   52: Int                       span:   91 ..   92 '3'
Token3   53: RParen                    span:   92 ..   93 ')'
Token3   54: StrInterpRParen           span:   93 ..   94 ')'
Token3   55: StrInterpChunk            span:   94 ..   97 'bar'
Token3   56: StrInterpEnd              span:   97 ..   98 '"'
Token3   57: Newline                   span:   98 ..   99 '\n'
Token3   58: DqStringInterpStart       span:   99 ..  101 '$"'
Token3   59: StrInterpChunk            span:  101 ..  104 'foo'
Token3   60: StrInterpLParen           span:  104 ..  105 '('
Token3   61: SingleQuotedString        span:  105 ..  110 ''baz''
Token3   62: StrInterpRParen           span:  110 ..  111 ')'
Token3   63: StrInterpChunk            span:  111 ..  114 'bar'
Token3   64: StrInterpEnd              span:  114 ..  115 '"'
Token3   65: Newline                   span:  115 ..  116 '\n'
Token3   66: DqStringInterpStart       span:  116 ..  118 '$"'
Token3   67: StrInterpChunk            span:  118 ..  121 'foo'
Token3   68: StrInterpLParen           span:  121 ..  122 '('
Token3   69: StrInterpRParen           span:  122 ..  123 ')'
Token3   70: StrInterpChunk            span:  123 ..  126 'bar'
Token3   71: StrInterpEnd              span:  126 ..  127 '"'
Token3   72: Newline                   span:  127 ..  128 '\n'
Token3   73: DqStringInterpStart       span:  128 ..  130 '$"'
Token3   74: StrInterpChunk            span:  130 ..  133 'foo'
Token3   75: StrInterpLParen           span:  133 ..  134 '('
Token3   76: Dollar                    span:  134 ..  135 '$'
Token3   77: Bareword                  span:  135 ..  138 'baz'
Token3   78: StrInterpRParen           span:  138 ..  139 ')'
Token3   79: StrInterpChunk            span:  139 ..  142 'bar'
Token3   80: StrInterpEnd              span:  142 ..  143 '"'
Token3   81: Newline                   span:  143 ..  144 '\n'
Token3   82: DqStringInterpStart       span:  144 ..  146 '$"'
Token3   83: StrInterpChunk            span:  146 ..  155 'escapes\"'
Token3   84: StrInterpEnd              span:  155 ..  156 '"'
Token3   85: Newline                   span:  156 ..  157 '\n'
Token3   86: DqStringInterpStart       span:  157 ..  159 '$"'
Token3   87: StrInterpChunk            span:  159 ..  168 'esc\"apes'
Token3   88: StrInterpEnd              span:  168 ..  169 '"'
Token3   89: Newline                   span:  169 ..  170 '\n'
Token3   90: DqStringInterpStart       span:  170 ..  172 '$"'
Token3   91: StrInterpChunk            span:  172 ..  175 'foo'
Token3   92: StrInterpLParen           span:  175 ..  176 '('
Token3   93: SqStringInterpStart       span:  176 ..  178 '$''
Token3   94: StrInterpLParen           span:  178 ..  179 '('
Token3   95: Int                       span:  179 ..  180 '1'
Token3   96: Plus                      span:  181 ..  182 '+'
Token3   97: LParen                    span:  183 ..  184 '('
Token3   98: Int                       span:  184 ..  185 '2'
Token3   99: Plus                      span:  186 ..  187 '+'
Token3  100: Int                       span:  188 ..  189 '3'
Token3  101: RParen                    span:  189 ..  190 ')'
Token3  102: StrInterpRParen           span:  190 ..  191 ')'
Token3  103: StrInterpEnd              span:  191 ..  192 '''
Token3  104: StrInterpRParen           span:  192 ..  193 ')'
Token3  105: StrInterpChunk            span:  193 ..  196 'bar'
Token3  106: StrInterpEnd              span:  196 ..  197 '"'
Token3  107: Newline                   span:  197 ..  198 '\n'
Token3  108: Eof                       span:  198 ..  198 ''
