src/snapshots/new_nu_parser__test__lexer@float.nu.snap
---
source: src/test.rs
expression: evaluate_lexer(path)
input_file: tests/lex/float.nu
snapshot_kind: text
---
==== TOKENS ====
Token3    0: Float                     span:    0 ..    3 '1.0'
Token3    1: Newline                   span:    3 ..    4 '\n'
Token3    2: Float                     span:    4 ..    9 '01.10'
Token3    3: Newline                   span:    9 ..   10 '\n'
Token3    4: Float                     span:   10 ..   15 '1.0e1'
Token3    5: Newline                   span:   15 ..   16 '\n'
Token3    6: Float                     span:   16 ..   22 '1.0e01'
Token3    7: Newline                   span:   22 ..   23 '\n'
Token3    8: Float                     span:   23 ..   25 '.2'
Token3    9: Newline                   span:   25 ..   26 '\n'
Token3   10: Float                     span:   26 ..   28 '2.'
Token3   11: Newline                   span:   28 ..   29 '\n'
Token3   12: Float                     span:   29 ..   33 '.3e3'
Token3   13: Newline                   span:   33 ..   34 '\n'
Token3   14: Float                     span:   34 ..   38 '3.e3'
Token3   15: Newline                   span:   38 ..   39 '\n'
Token3   16: Float                     span:   39 ..   45 '.1e-10'
Token3   17: Newline                   span:   45 ..   46 '\n'
Token3   18: Float                     span:   46 ..   52 '.2e+20'
Token3   19: Newline                   span:   52 ..   53 '\n'
Token3   20: Float                     span:   53 ..   62 '45_67.8_9'
Token3   21: Newline                   span:   62 ..   63 '\n'
Token3   22: Float                     span:   63 ..   69 '45_.8_'
Token3   23: Newline                   span:   69 ..   70 '\n'
Token3   24: Bareword                  span:   70 ..   71 '_'
Token3   25: Float                     span:   71 ..   73 '.3'
Token3   26: Newline                   span:   73 ..   74 '\n'
Token3   27: Bareword                  span:   74 ..   77 '_44'
Token3   28: Float                     span:   77 ..   80 '.44'
Token3   29: Newline                   span:   80 ..   81 '\n'
Token3   30: Float                     span:   81 ..   83 '5.'
Token3   31: Bareword                  span:   83 ..   84 '_'
Token3   32: Newline                   span:   84 ..   85 '\n'
Token3   33: Bareword                  span:   85 ..   86 '_'
Token3   34: Dot                       span:   86 ..   87 '.'
Token3   35: Bareword                  span:   87 ..   88 '_'
Token3   36: Newline                   span:   88 ..   89 '\n'
Token3   37: Eof                       span:   89 ..   89 ''
