src/snapshots/new_nu_parser__test__lexer@int.nu.snap
---
source: src/test.rs
expression: evaluate_lexer(path)
input_file: tests/lex/int.nu
snapshot_kind: text
---
Token    0: Number                    span:    0 ..    1 '0'
Token    1: Newline                   span:    1 ..    2 '\n'
Token    2: Number                    span:    2 ..    4 '00'
Token    3: Newline                   span:    4 ..    5 '\n'
Token    4: Number                    span:    5 ..   10 '0x123'
Token    5: Newline                   span:   10 ..   11 '\n'
Token    6: Number                    span:   11 ..   16 '0b101'
Token    7: Newline                   span:   16 ..   17 '\n'
Token    8: Number                    span:   17 ..   18 '0'
Token    9: Name                      span:   18 ..   19 '_'
Token   10: Newline                   span:   19 ..   20 '\n'
Token   11: Number                    span:   20 ..   22 '0b'
Token   12: Name                      span:   22 ..   23 'o'
Token   13: Newline                   span:   23 ..   24 '\n'
Token   14: Number                    span:   24 ..   26 '0x'
Token   15: Newline                   span:   26 ..   27 '\n'
Token   16: Number                    span:   27 ..   32 '01x10'
Token   17: Newline                   span:   32 ..   33 '\n'
