src/snapshots/new_nu_parser__test__lexer@sq_string_interp.nu.snap
---
source: src/test.rs
expression: evaluate_lexer(path)
input_file: tests/lex/sq_string_interp.nu
---
==== TOKENS ====
Token3    0: SqStringInterpStart       span:    0 ..    2 '$''
Token3    1: StrInterpEnd              span:    2 ..    3 '''
Token3    2: Newline                   span:    3 ..    4 '\n'
Token3    3: SqStringInterpStart       span:    4 ..    6 '$''
Token3    4: StrInterpChunk            span:    6 ..    9 'foo'
Token3    5: StrInterpEnd              span:    9 ..   10 '''
Token3    6: Newline                   span:   10 ..   11 '\n'
Token3    7: SqStringInterpStart       span:   11 ..   13 '$''
Token3    8: StrInterpChunk            span:   13 ..   17 'foo)'
Token3    9: StrInterpEnd              span:   17 ..   18 '''
Token3   10: Newline                   span:   18 ..   19 '\n'
Token3   11: SqStringInterpStart       span:   19 ..   21 '$''
Token3   12: StrInterpLParen           span:   21 ..   22 '('
Token3   13: Int                       span:   22 ..   23 '1'
Token3   14: StrInterpRParen           span:   23 ..   24 ')'
Token3   15: StrInterpChunk            span:   24 ..   27 'bar'
Token3   16: StrInterpEnd              span:   27 ..   28 '''
Token3   17: Newline                   span:   28 ..   29 '\n'
Token3   18: SqStringInterpStart       span:   29 ..   31 '$''
Token3   19: StrInterpChunk            span:   31 ..   34 'foo'
Token3   20: StrInterpLParen           span:   34 ..   35 '('
Token3   21: Int                       span:   35 ..   36 '1'
Token3   22: StrInterpRParen           span:   36 ..   37 ')'
Token3   23: StrInterpChunk            span:   37 ..   40 'bar'
Token3   24: StrInterpEnd              span:   40 ..   41 '''
Token3   25: Newline                   span:   41 ..   42 '\n'
Token3   26: SqStringInterpStart       span:   42 ..   44 '$''
Token3   27: StrInterpChunk            span:   44 ..   47 'foo'
Token3   28: StrInterpLParen           span:   47 ..   48 '('
Token3   29: LParen                    span:   48 ..   49 '('
Token3   30: Int                       span:   49 ..   50 '1'
Token3   31: RParen                    span:   50 ..   51 ')'
Token3   32: StrInterpRParen           span:   51 ..   52 ')'
Token3   33: StrInterpChunk            span:   52 ..   55 'bar'
Token3   34: StrInterpEnd              span:   55 ..   56 '''
Token3   35: Newline                   span:   56 ..   57 '\n'
Token3   36: SqStringInterpStart       span:   57 ..   59 '$''
Token3   37: StrInterpChunk            span:   59 ..   62 'foo'
Token3   38: StrInterpLParen           span:   62 ..   63 '('
Token3   39: Int                       span:   63 ..   64 '1'
Token3   40: Plus                      span:   65 ..   66 '+'
Token3   41: LParen                    span:   67 ..   68 '('
Token3   42: Int                       span:   68 ..   69 '3'
Token3   43: Plus                      span:   70 ..   71 '+'
Token3   44: Int                       span:   72 ..   73 '4'
Token3   45: RParen                    span:   73 ..   74 ')'
Token3   46: StrInterpRParen           span:   74 ..   75 ')'
Token3   47: StrInterpChunk            span:   75 ..   78 'bar'
Token3   48: StrInterpEnd              span:   78 ..   79 '''
Token3   49: Newline                   span:   79 ..   80 '\n'
Token3   50: SqStringInterpStart       span:   80 ..   82 '$''
Token3   51: StrInterpChunk            span:   82 ..   85 'foo'
Token3   52: StrInterpLParen           span:   85 ..   86 '('
Token3   53: StrInterpRParen           span:   86 ..   87 ')'
Token3   54: StrInterpChunk            span:   87 ..   90 'bar'
Token3   55: StrInterpEnd              span:   90 ..   91 '''
Token3   56: Newline                   span:   91 ..   92 '\n'
Token3   57: SqStringInterpStart       span:   92 ..   94 '$''
Token3   58: StrInterpChunk            span:   94 ..   97 'foo'
Token3   59: StrInterpLParen           span:   97 ..   98 '('
Token3   60: DqStringInterpStart       span:   98 ..  100 '$"'
Token3   61: StrInterpLParen           span:  100 ..  101 '('
Token3   62: Int                       span:  101 ..  102 '1'
Token3   63: Plus                      span:  103 ..  104 '+'
Token3   64: LParen                    span:  105 ..  106 '('
Token3   65: Int                       span:  106 ..  107 '2'
Token3   66: Plus                      span:  108 ..  109 '+'
Token3   67: Int                       span:  110 ..  111 '3'
Token3   68: RParen                    span:  111 ..  112 ')'
Token3   69: StrInterpRParen           span:  112 ..  113 ')'
Token3   70: StrInterpEnd              span:  113 ..  114 '"'
Token3   71: StrInterpRParen           span:  114 ..  115 ')'
Token3   72: StrInterpChunk            span:  115 ..  118 'bar'
Token3   73: StrInterpEnd              span:  118 ..  119 '''
Token3   74: Newline                   span:  119 ..  120 '\n'
Token3   75: Eof                       span:  120 ..  120 ''
